--- a/responsive-design/css/screen.css
+++ b/responsive-design/css/screen.css
@@ -69,6 +69,7 @@ header {
 }
 
 header a.logo {
+    z-index: 1; /*change the stacking order. Default is 0. by putting 1, bring it up */
     position: absolute;
     display: block; width: 160px; height: 66px;
     background: url(../images/logo.svg) no-repeat 0 0;
@@ -229,8 +230,83 @@ section.how-to blockquote p.credit::before {
     top: -1px; left: 0px;
 }
 
-/* Footer */
+/* Navigation */
 
+nav {
+    background-color: rgba(0,0,0,.65);
+    position: absolute;
+    top: 0px; left: 0px;
+    padding: 50px 0 0 0;
+    width: 100%; /*make sure the navigation element is as wide as the parent*/
+}
+
+nav::after {
+    content:'';
+    display: block; 
+    clear: both;
+}
+
+nav ul {
+    list-style: none; /* take away the bullets */
+    margin: 0;
+    padding: 0px;
+}
+
+nav ul li:hover{
+    background-color: #2b0306;
+} 
+
+nav ul li:hover > ul {
+    display:block;    
+}
+nav ul li a {
+    display: inline-block;
+    color: #fff;
+    padding: 10px 20px;
+    text-decoration: none;
+    width: 125px;
+    position: relative;
+}
+
+nav ul li a:visited {
+    color: #fff;
+}
+
+nav ul li a:hover {
+    background-color: #6d0911;
+}
+
+nav ul ul {
+    position: absolute: 
+    top: 100%;
+    background-color: #2b0306;
+    display: none;
+}
+
+nav ul ul li {
+    position: relative;
+}
+
+nav ul ul ul {
+    left: 100%;
+    top: 0px;
+}
+
+/* Nav Top level */
+nav > ul { /* only target if ul is immediately below nav */
+    padding-left: 200px;
+}
+
+nav > ul > li {
+    float: left;
+}
+
+nav > ul > li > a {
+    width: auto;
+    padding: 10px 20px 15px 20px;
+}
+  
+/* Footer */
 footer {
     font-size: .8em;
     margin: 40px; 
@@ -252,4 +328,27 @@ footer a:visited {
 
 footer a:hover {
     color: #000;
+}
+
+
+
+/* Media Queries */
+
+@media screen and (max-width: 1000px) {
+    h1 { font-size: 2.4em; }
+    
+    /* Header */
+    header div.hero { left: 56%; }
+    header div.hero h1 { margin-bottom: 20px; }
+    
+    /* Section - Atmosphere */
+    section.atmosphere article { padding-left: 400px; background-size: 375px auto; }
+}
+
+@media screen and (max-width: 825px) {
+    h1 {font-size: 2.2em;}
+    header {height: 300px; background-image: url(../images/banner_825.jpg);}
+    header div.hero {top: 120px; left: 48%;}
+    section.atmosphere article {padding-left: 325px; background-size: 300px; auto;}
+        
 }
