--- a/responsive-design/lynda/css/screen.css
+++ b/responsive-design/lynda/css/screen.css
@@ -1,5 +1,7 @@
 /* CSS Document for Screens */
-@import url('https://fonts.googleapis.com/css?family=Open+Sans:300,300i,700,700i');
+@import
+    url('https://fonts.googleapis.com/css?family=Open+Sans:300,300i,700,700i')
+    ;
 
 body {
     font-family: 'Open Sans', sans-serif;
@@ -9,18 +11,24 @@ body {
     margin: 0;
     padding: 0;
 }
+
 #page {
-    max-width: 1200px; 
+    max-width: 1200px;
     margin: 0 auto;
     position: relative;
 }
 
 a.btn {
-    font-size: 1.2em; text-decoration: none; color: #fff; border: 1px solid #fff; padding: 4px 15px;
+    font-size: 1.2em;
+    text-decoration: none;
+    color: #fff;
+    border: 1px solid #fff;
+    padding: 4px 15px;
     transition: background-color .5s;
 }
+
 a.btn:hover {
-    background-color: rgba(0,0,0,.3);
+    background-color: rgba(0, 0, 0, .3);
 }
 
 /* Text */
@@ -56,37 +64,47 @@ p {
 a {
     color: #007eff;
 }
+
 a:visited {
     color: #65b1ff;
 }
 
 /* Header */
-
 header {
-    height: 430px; 
-    background: #cf0004 url(../images/banner_1200.jpg) no-repeat center bottom;
+    height: 430px;
+    background: #cf0004 url(../images/banner_1200.jpg) no-repeat center
+        bottom;
     position: relative;
 }
 
 header a.logo {
-    z-index: 1; /*change the stacking order. Default is 0. by putting 1, bring it up */
+    z-index: 1;
+    /*change the stacking order. Default is 0. by putting 1, bring it up */
     position: absolute;
-    display: block; width: 160px; height: 66px;
+    display: block;
+    width: 160px;
+    height: 66px;
     background: url(../images/logo.svg) no-repeat 0 0;
     background-size: contain;
-    top: 15px; left: 20px;
+    top: 15px;
+    left: 20px;
 }
 
-header a.logo span{
+header a.logo span {
     display: none;
 }
 
 header div.hero {
-    position: absolute; width: 42%; top: 130px; left: 55%;
+    position: absolute;
+    width: 42%;
+    top: 130px;
+    left: 55%;
 }
 
 header div.hero h1 {
-    line-height: 1em; margin: 0 0 30px 0; color: #fff;
+    line-height: 1em;
+    margin: 0 0 30px 0;
+    color: #fff;
 }
 
 /* Section - All */
@@ -96,13 +114,15 @@ section {
 
 /*Psuedo element to clear the main section with the floating elements inside it */
 section::after {
-    content:'';
+    content: '';
     display: block;
     clear: both;
 }
 /* Section - Main */
 section.main {
-    margin-top: 20px; margin-bottom: 30px; padding:0;
+    margin-top: 20px;
+    margin-bottom: 30px;
+    padding: 0;
 }
 
 section.main aside {
@@ -112,31 +132,34 @@ section.main aside {
 }
 
 section.main .content {
-    margin: 15px; background: no-repeat center top; background-size: 75px 75px; padding-top: 85px; 
+    margin: 15px;
+    background: no-repeat center top;
+    background-size: 75px 75px;
+    padding-top: 85px;
 }
 
 section.main aside h3 a {
-    color: #000; text-decoration: none;     
+    color: #000;
+    text-decoration: none;
 }
 
 section.main aside h3 a:hover {
     text-decoration: underline;
 }
 
-section.main aside .content.trending { 
+section.main aside .content.trending {
     background-image: url('../images/icon_star.svg');
 }
-    
-section.main aside .content.find-it { 
+
+section.main aside .content.find-it {
     background-image: url('../images/icon_marker.svg');
 }
 
-section.main aside .content.tools { 
+section.main aside .content.tools {
     background-image: url('../images/icon_gear.svg');
 }
 
 /* Section Atmosphere */
-
 section.atmosphere {
     background-color: #cc6633;
     padding-top: 30px;
@@ -146,43 +169,44 @@ section.atmosphere {
 
 section.atmosphere article {
     padding: 0 20px 0 515px;
-    background: url(../images/photo_lounge.jpg) no-repeat 0 5px; min-height: 220px;
+    background: url(../images/photo_lounge.jpg) no-repeat 0 5px;
+    min-height: 220px;
 }
-
 
 /* Section How To */
 section.how-to {
-    background-color: #eee9d9; position: relative;
+    background-color: #eee9d9;
+    position: relative;
 }
 
 section.how-to aside {
-    width:30%;
+    width: 30%;
     float: left;
     margin-right: 10px;
-    
 }
 
 section.how-to aside .content {
     padding: 30px 30px 20px 0;
-    
 }
 
 section.how-to aside .content img {
     display: block;
-    margin-bottom: 15px; 
+    margin-bottom: 15px;
     width: 70%;
 }
 
 section.how-to aside .content h4 {
-    margin-bottom: 0; 
+    margin-bottom: 0;
 }
 
 section.how-to aside .content p {
-    margin-bottom: .5em; 
+    margin-bottom: .5em;
 }
 
 section.how-to aside .content a {
-    display: inline-block; color: #cc6633; font-weight: 700; 
+    display: inline-block;
+    color: #cc6633;
+    font-weight: 700;
 }
 
 section.how-to blockquote {
@@ -190,7 +214,9 @@ section.how-to blockquote {
     width: 32%;
     color: #444;
     background-color: #fff;
-    position: absolute; bottom: 0; right: 4%;
+    position: absolute;
+    bottom: 0;
+    right: 4%;
 }
 
 section.how-to blockquote p {
@@ -198,7 +224,8 @@ section.how-to blockquote p {
 }
 
 section.how-to blockquote p.quote {
-    font-style: italic; font-size: 1.2em;
+    font-style: italic;
+    font-size: 1.2em;
 }
 
 section.how-to blockquote p.credit {
@@ -207,14 +234,15 @@ section.how-to blockquote p.credit {
     margin-top: 0;
     padding-left: 20px;
     line-height: 1.3em;
-    position: relative;    
+    position: relative;
 }
 
 section.how-to blockquote::before {
     content: '\201c';
     color: #d2bd65;
     position: absolute;
-    top: 10px; left: 8px; 
+    top: 10px;
+    left: 8px;
     font-size: 5em;
     font-family: serif;
 }
@@ -226,23 +254,25 @@ section.how-to blockquote p.quote::after {
 
 section.how-to blockquote p.credit::before {
     content: '\2014';
-    position: absolute; 
-    top: -1px; left: 0px;
+    position: absolute;
+    top: -1px;
+    left: 0px;
 }
 
 /* Navigation */
-
 nav {
-    background-color: rgba(0,0,0,.65);
+    background-color: rgba(0, 0, 0, .65);
     position: absolute;
-    top: 0px; left: 0px;
+    top: 0px;
+    left: 0px;
     padding: 50px 0 0 0;
-    width: 100%; /*make sure the navigation element is as wide as the parent*/
+    width: 100%;
+    /*make sure the navigation element is as wide as the parent*/
 }
 
 nav::after {
-    content:'';
-    display: block; 
+    content: '';
+    display: block;
     clear: both;
 }
 
@@ -252,13 +282,14 @@ nav ul {
     padding: 0px;
 }
 
-nav ul li:hover{
+nav ul li:hover {
     background-color: #2b0306;
-} 
-
-nav ul li:hover > ul {
-    display:block;    
 }
+
+nav ul li:hover>ul {
+    display: block;
+}
+
 nav ul li a {
     display: inline-block;
     color: #fff;
@@ -293,23 +324,23 @@ nav ul ul ul {
 }
 
 /* Nav Top level */
-nav > ul { /* only target if ul is immediately below nav */
+nav>ul { /* only target if ul is immediately below nav */
     padding-left: 200px;
 }
 
-nav > ul > li {
+nav>ul>li {
     float: left;
 }
 
-nav > ul > li > a {
+nav>ul>li>a {
     width: auto;
     padding: 10px 20px 15px 20px;
 }
-  
+
 /* Footer */
 footer {
     font-size: .8em;
-    margin: 40px; 
+    margin: 40px;
     color: #999;
 }
 
@@ -330,25 +361,42 @@ footer a:hover {
     color: #000;
 }
 
-
-
 /* Media Queries */
-
 @media screen and (max-width: 1000px) {
-    h1 { font-size: 2.4em; }
-    
+    h1 {
+        font-size: 2.4em;
+    }
+
     /* Header */
-    header div.hero { left: 56%; }
-    header div.hero h1 { margin-bottom: 20px; }
-    
+    header div.hero {
+        left: 56%;
+    }
+    header div.hero h1 {
+        margin-bottom: 20px;
+    }
+
     /* Section - Atmosphere */
-    section.atmosphere article { padding-left: 400px; background-size: 375px auto; }
+    section.atmosphere article {
+        padding-left: 400px;
+        background-size: 375px auto;
+    }
 }
 
 @media screen and (max-width: 825px) {
-    h1 {font-size: 2.2em;}
-    header {height: 300px; background-image: url(../images/banner_825.jpg);}
-    header div.hero {top: 120px; left: 48%;}
-    section.atmosphere article {padding-left: 325px; background-size: 300px; auto;}
-        
+    h1 {
+        font-size: 2.2em;
+    }
+    header {
+        height: 300px;
+        background-image: url(../images/banner_825.jpg);
+    }
+    header div.hero {
+        top: 120px;
+        left: 48%;
+    }
+    section.atmosphere article {
+        padding-left: 325px;
+        background-size: 300px;
+        auto;
+    }
 }
